--- a/static/styles/global.scss
+++ b/static/styles/global.scss
@@ -14,6 +14,8 @@
 $body-bg: #fafafa;
 $body-color: #111;
 $special: rgb(38, 38, 75);
+$postbg: rgba(255, 255, 255, 0.671);
+$postbghover: rgba(255, 255, 255, 0.726);
 
 
 $theme-colors: (
@@ -75,4 +77,24 @@ body {
 .form-control {
     padding: 15px;
     border-radius: 0px !important;
+}
+
+.network a {
+    text-decoration: none !important;
+    display: inline-block;
+    position: relative;
+    padding-bottom: 3px;
+    color: #111;
+    
+    &::after {
+        content: '';
+        display: block;
+        margin: auto;
+        height: 3px;
+        width: 0px;
+        background: transparent;
+        transition: width .5s ease, background-color .5s ease;
+        width: 100%;
+        background: $special;
+    }
 }
